--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^v2.10",
         "laravel/ui": "^4.0",
         "livewire/livewire": "^3.0",
+        "maatwebsite/excel": "^3.1",
         "php-flasher/flasher-toastr-laravel": "^1.13"
     },
     "require-dev": {
